# EHDSLens

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docs.yml  release.yml
.streamlit/: config.toml
_Documentation/: ipotesi.md  ipotesi_SLR_EHDS_aggiornata.md
docs/: index.md
docs/about/: changelog.md  citation.md  contributing.md
docs/api/: analysis.md  cli.md  core.md  data.md  export.md  visualization.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: analysis.md  data-exploration.md  export.md  overview.md  visualization.md
docs/methodology/: grade-cerqual.md  prisma.md  thematic.md
notebooks/: 01_quick_start.ipynb  02_data_exploration.ipynb  03_visualization.ipynb  04_export_reports.ipynb
src/ehdslens/: __init__.py  analysis.py  api.py  cli.py  core.py  dashboard.py  data.py  export.py  visualization.py
tests/: __init__.py  test_core.py
